# dupescan

./: .gitignore  LICENSE  MANIFEST.in  finddupes.py  generate-fixtures.py  generate-tests.py  pyproject.toml  readme.rst  setup.py
dupelib/: __init__.py  criteria.py  fs.py  programs.py  report.py  resources.py  walk.py
dupescan/: __init__.py  algo.py  cli.py  collections.py  console.py  core.py  correlate.py  criteria.py  finddupes.py  fs.py  funcutil.py  log.py  platform.py  preferhelp  report.py  resources.py  streampool.py  types.py  unitformat.py  units.py  util.py  walk.py
dupescan/cli/: _common.py  correlate.py  finddupes.py  preferhelp
dupescan/criteria/: __init__.py  _common.py  evaluate.py  lex.py  parse.py
dupescan/fs/: __init__.py  _fileentry.py  _fileinstance.py  _root.py  _walker.py
